added cmake file, updated README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-I'll create a Makefile eventually.
+to build, run:
 
-For now, to compile this, run this command:
-gcc -Wall -lgit2 -g -o main main.c
+cmake .
+make
